--- a/index.ejs
+++ b/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aurelia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">3
 </head>
 
 <body>
